Theme with no author causing layout issues (#2469)

--- a/src/core/css/SearchResult.scss
+++ b/src/core/css/SearchResult.scss
@@ -61,7 +61,7 @@
 .SearchResult-author,
 .SearchResult-users {
   color: $sub-text-color;
-  display: inline-block;
+  display: block;
   font-size: $font-size-s;
   font-weight: normal;
   margin: 0;
@@ -77,7 +77,6 @@
 }
 
 .SearchResult-author {
-  display: block;
   margin-right: 0.5em;
   word-wrap: break-word;
 }
